# test

./: .gitattributes  .gitignore  .pre-commit-config.yaml  docker-compose.yaml
.github/actions/setup-backend-machine/: action.yaml
.github/actions/setup-frontend-machine/: action.yaml
.github/workflows/: cd.yaml  ci-backend.yaml  ci-commit.yaml  ci-docker.yaml  ci-frontend.yaml  ci-scripts.yaml  wait-for-workflows.yaml
backend/: .dockerignore  .env.example  README.md  main.py  pyproject.toml  ruff.toml
backend/docker/: development.dockerfile  production.dockerfile
backend/src/: config.py  utils.py
backend/src/routes/: api.py  healthy.py
backend/tests/routes/: test_healthy.py
frontend/: .dockerignore  .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/docker/: development.dockerfile  production.dockerfile
frontend/src/: main.tsx  vite-env.d.ts
frontend/src/components/Healthy/: Healthy.module.css  HealthyCard.tsx  StatusIcon.tsx
frontend/src/components/NotFound/: NotFoundCard.module.css  NotFoundCard.tsx
frontend/src/locales/: en.json  he.json  index.ts
frontend/src/pages/: Healthy.tsx  NotFound.tsx
frontend/src/routes/: index.tsx
frontend/tests/components/Healthy/: HealthyCard.test.tsx
frontend/tests/components/NotFound/: NotFoundCard.test.tsx
scripts/: .commit-check.yaml  check_commit_message.py  commit-template
